# fastapi-trusted-devices

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
api/: index.html
configuration/: index.html
contributing/: index.html
docs/: api.md  configuration.md  contributing.md  events.md  exceptions.md  index.md  installation.md  license.md  quickstart.md  repository.md  roadmap.md
events/: index.html
examples/: minimal_app.py
exceptions/: index.html
installation/: index.html
launch/: README.md  devto-article.md  discoverability.md  reddit.md  show-hn.md  social.md
license/: index.html
quickstart/: index.html
repository/: index.html
roadmap/: index.html
search/: search_index.json
src/fastapi_trusted_devices/: __init__.py  config.py  events.py  exceptions.py  facade.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_api.py  test_service.py
